# safeboard_2022_cpp

./: CMakeLists.txt  README.md  main.cpp  return_codes.h  scan_bat.h  scan_exe.h  scan_js.h
modules/bat_scanner/: scan_bat.cpp  scan_bat.h
modules/exe_scanner/: scan_exe.cpp  scan_exe.h  signatures
modules/helpers/: get_signatures.cpp  get_signatures.h  return_codes.h
modules/js_scanner/: scan_js.cpp  scan_js.h
